# 08_philo_bonus

./: CMakeLists.txt  philo_bonus.c  philo_bonus.h
src_philo_bonus/: ft_atoi.c  ft_check.c  ft_exit_func.c  ft_init_data.c  ft_monitoring_func.c  ft_print_error.c  ft_read_args.c  ft_simulation.c  ft_start_simulation.c  ft_time.c
